--- a/sass/components/_venue_info.scss
+++ b/sass/components/_venue_info.scss
@@ -1,31 +1,38 @@
 .venue {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 650px;
+  height: 100vh;
+  margin-top: 27.9rem;
 
-  &__info_title {
-    @media (max-width: 768px) {
-      margin-top: 10px;
+  &__info {
+    &--title {
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: .78rem;
+      font-weight: 700;
+    }
+
+    &--description {
+      width: 60rem;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+      text-align: center;
     }
   }
 
   button {
-    width: 172px;
-    height: 71px;
+    width: 15.2rem;
+    height: 6.8rem;
 
-    @media (max-width: 768px) {
-      width: 151px;
-      height: 48px;
-    }
+    // @media (max-width: 768px) {
+    //   width: 151px;
+    //   height: 48px;
+    // }
   }
 
-  &__info__description {
-    width: 600px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-  }
+  
 
   &__tree {
     position: absolute;
@@ -33,17 +40,13 @@
     right: -200px;
     z-index: -100;
 
-    // Temporary fix. needs to be removed when fixing responsiveness, currently breaks tests on desktop.
-    @media (max-width: 768px) {
-      display: none;
-    }
   }
 
-  &__coverbox {
-    height: 150px;
-    width: 100%;
-    z-index: 100;
-    margin-top: 30px;
-    background-color: $color-bg-primary;
-  }
+  // &__coverbox {
+  //   height: 150px;
+  //   width: 100%;
+  //   z-index: 100;
+  //   margin-top: 30px;
+  //   background-color: $color-bg-primary;
+  // }
 }
